ecmascript/parser/tests/typescript-errors/tsc/es6/destructuring/declarationWithNoInitializer/input.ts.stderr
error[1182]: Destructuring bindings require initializers
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/declarationWithNoInitializer/input.ts:1:5
  |
1 | var [a, b];          // Error, no initializer
  |     ^^^^^^

error[1182]: Destructuring bindings require initializers
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/declarationWithNoInitializer/input.ts:2:5
  |
2 | var {c, d};          // Error, no initializer
  |     ^^^^^^

